[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Critters/DragonVioletDragon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Critters/DragonGreenDragon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Critters/DragonBlackDragon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Critters/DragonSilverDragon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Critters/DragonWhiteDragon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Critters/DragonBlueDragon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Critters/DragonYellowDragon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Critters/DragonRedDragon.png" type="Texture" id=8]
[ext_resource path="res://UI/Dancing Dragons/Dancing Dragons.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Dancing Dragons"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DancingDragonsContainer/HBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DancingDragonsContainer/HBoxContainer/TextureRect:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Dancing Dragons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="DancingDragonsPlayer" type="AnimationPlayer" parent="."]
"anims/Dancing Dragons" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="DancingDragonsContainer" type="VBoxContainer" parent="."]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.75

[node name="LoadingText" type="Label" parent="DancingDragonsContainer"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 1920, 200 )
text = "Generating dungeon..."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DancingDragonsContainer"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 236.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 890.0
margin_right = 922.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 926.0
margin_right = 958.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="TextureRect3" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 962.0
margin_right = 994.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer"]
margin_left = 998.0
margin_right = 1030.0
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="DancingDragonsContainer"]
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 272.0
alignment = 1

[node name="TextureRect5" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 890.0
margin_right = 922.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="TextureRect6" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 926.0
margin_right = 958.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="TextureRect7" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 962.0
margin_right = 994.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="TextureRect8" type="TextureRect" parent="DancingDragonsContainer/HBoxContainer2"]
margin_left = 998.0
margin_right = 1030.0
margin_bottom = 32.0
texture = ExtResource( 7 )
